libstream-perl (0.7.2) UNRELEASED; urgency=low

  * Stream::File - truncate on errors
  * Stream::File::In - don't read incomplete lines

 -- Vyacheslav Matjukhin (No comments) <mmcleric@yandex-team.ru>  Tue, 08 Jun 2010 21:14:41 +0400

libstream-perl (0.7.1) unstable; urgency=low

  * process() function works when third parameter is undef

 -- Vyacheslav Matjukhin (No comments) <mmcleric@yandex-team.ru>  Tue, 25 May 2010 23:17:11 +0400

libstream-perl (0.7.0) unstable; urgency=low

  * Stream::Base as a base class for ins, outs and filters
  * Stream::Filter is not an descendant of Stream::Out anymore
  * process() function understands chunk_size and commit_step options
  * Stream::Catalog::Plugin::File: saner error message, don't dump full
    content
  * Stream::Catalog: bind_in overrides local files

 -- Vyacheslav Matjukhin (No comments) <mmcleric@yandex-team.ru>  Thu, 20 May 2010 20:13:31 +0400

libstream-perl (0.6.6) unstable; urgency=low

  * flushable filters cannot be attached to input streams
  * FilteredOut commit result reverted

 -- Andrei Mishchenko <druxa@yandex-team.ru>  Sat, 27 Feb 2010 18:20:13 +0300

libstream-perl (0.6.5) unstable; urgency=low

  * commitable filters 

 -- Andrei Mishchenko <druxa@yandex-team.ru>  Sat, 27 Feb 2010 16:18:04 +0300

libstream-perl (0.6.4) unstable; urgency=low

  * Stream::Filter: write method works in scalar context
  * many doc improvements
  * process(): chunk size defaults to 100 instead of 1000

 -- Vyacheslav Matjukhin (No comments) <mmcleric@yandex-team.ru>  Fri, 19 Feb 2010 16:00:55 +0300

libstream-perl (0.6.3) unstable; urgency=low

  * Stream::File: documentation fixed; write_chunk([]) don't print warning

 -- Vyacheslav Matjukhin (No comments) <mmcleric@yandex-team.ru>  Fri, 05 Feb 2010 20:29:53 +0300

libstream-perl (0.6.2) unstable; urgency=low

  * bracket syntax in catalog implemented

 -- Vyacheslav Matjukhin (No comments) <mmcleric@yandex-team.ru>  Mon, 14 Dec 2009 00:11:20 +0300
