@@ -63,7 +63,7 @@ sub _load {
         if (-e $file) {
             my $fh = xopen($file);
             my $content;
-            { local $/; $content = <$fh>; }
+            { local $/ = undef; $content = <$fh>; }
             $content = "package $package".int(rand(10 ** 6)).";\n# line 1 $dir/$name\n$content"; # FIXME - if file is loaded twice, shouldn't packages match?
             my $object = eval $content;
             if ($@) {
